# crazyflie_simulation

./: .gitignore  .gitlab-ci.yml  .releaserc.json  CMakeLists.txt  Dockerfile  README.md  package-lock.json  package.json  run_simulation.sh
.devcontainer/: devcontainer.json
ci/: Dockerfile.argos
controllers/: CMakeLists.txt
controllers/cf_controller/: CMakeLists.txt  cf_controller.cpp  cf_controller.h
controllers/crazyflie_pdr/: CMakeLists.txt  command.h  crazyflie_pdr.cpp  crazyflie_pdr.h  drone_registry.h  state.h
experiments/: pdr_simulation.argos  simulation.argos
socket_link/: CMakeLists.txt  socket_link.cpp  socket_link.h
src/: CMakeLists.txt  command.h  crazyflie_controller.cpp  crazyflie_controller.h  drone_registry.h  socket_link.cpp  socket_link.h  state.h  state_machine.cpp  state_machine.h
